@@ -9,12 +9,25 @@ repositories {
     mavenCentral()
 }
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_25
+    targetCompatibility = JavaVersion.VERSION_25
+}
+
+
 dependencies {
+    implementation("org.springframework.boot:spring-boot-starter-web:4.0.1")
+    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.1")
     testImplementation(platform("org.junit:junit-bom:5.10.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
+tasks.withType<JavaCompile> {
+    options.compilerArgs.add("--enable-preview")
+    options.compilerArgs.add("-parameters")
+}
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("--enable-preview")
 }
